src/assets/styles/styles.scss
@import "variables";
@import "media-queries";
@import "bases";
@import "classes";

/*=============== Main Container ===============*/
.main__container {
  width: 100%;
  min-height: 100vh;
  display: grid;
  grid-template-rows: auto 2fr auto;
  padding: 1.9rem 1.275rem 2.4rem 1.2rem;

  @include md {
    padding: 4.6rem 4.406rem 2.4rem 7.7rem;
  }

  @include xl {
    padding: 4.6rem 4.406rem 2.4rem 7.7rem;
  }
}

/*=============== Header ===============*/
.header {
  width: 100%;
  margin-bottom: 1.8rem;

  nav {
    display: flex;
    align-items: center;
    justify-content: space-between;

    .nav__logo {
      padding: 0.8rem;
      font-family: var(--crimson-pro-front);
      font-size: 1.4rem;
      font-weight: 200;
      line-height: 1.6rem;
      text-transform: uppercase;
      border: 0.1rem solid #fff;
    }

    .nav__menu {
      position: fixed;
      top: 0;
      right: -100%;
      width: 100%;
      height: 100%;
      padding: 25.8rem 14.1rem 33.4rem 14.2rem;
      background: var(--bg-color);
      z-index: 100;
      transition: 0.4s;

      .nav__list {
        display: flex;
        flex-direction: column;
        gap: 3.2rem;
        text-align: center;

        .nav__items {
          .nav__link {
            position: relative;
            font-size: 1.8rem;
            font-weight: 700;
            line-height: 2.2rem;
            font-family: var(--montserrat-font);
            transition: 0.4s;

            &::after {
              content: "";
              position: absolute;
              bottom: -0.8rem;
              left: -0.1rem;
              width: 0;
              transition: 0.3s;
            }

            &:hover::after {
              content: "";
              width: 100%;
              border: 0.2rem solid #fff;
            }
          }
        }
      }

      .nav__close {
        display: inline;
        position: absolute;
        top: 2.192rem;
        right: 1.992rem;
        font-size: 3.8rem;
        cursor: pointer;
      }
    }

    /* Show menu */

    .show-menu {
      right: 0;
    }

    .nav__toggle {
      font-size: 3.8rem;
      cursor: pointer;
    }
  }

  @include md {
    margin-bottom: 0;
    .nav {
      .nav__menu {
        position: initial;
        padding: 0;
        width: auto;

        .nav__list {
          flex-direction: row;
        }

        .nav__close {
          display: none;
        }
      }

      .nav__toggle {
        display: none;
      }
    }
  }

  @include xl {
    margin-bottom: 5rem;
    .nav {
      .nav__menu {
        position: initial;
        padding: 0;
        width: auto;

        .nav__list {
          flex-direction: row;
          gap: 8.6rem;
        }

        .nav__close {
          display: none;
        }
      }

      .nav__toggle {
        display: none;
      }
    }
  }
}

/*=============== Main ===============*/
.main {
  position: relative;
  display: grid;
  grid-template-columns: 1fr;
  align-items: center;
  row-gap: 2.557rem;

  .main__content {
    display: flex;
    flex-direction: column;
    justify-content: center;

    h1 {
      margin-bottom: 2.5rem;
      font-size: 3.6rem;
      font-weight: 500;
      line-height: 4.6rem;
      font-family: var(--lora-font);
    }

    p {
      width: 25rem;
      font-size: 1.4rem;
      font-weight: 400;
      line-height: 1.7rem;
      margin-bottom: 2.5rem;
    }

    a {
      font-size: 1.4rem;
      font-weight: 700;
      line-height: 1.7rem;

      i {
        font-size: 1.2rem;
        margin-left: 0.8rem;
      }
    }
  }

  .main__services {
    height: 26.432rem;
    background: url(../images/photo1.png) center center / cover;

    .main__service {
      position: absolute;
      bottom: -9rem;
      left: 11.4%;
      width: 30rem;
      padding: 1.683rem 7.1rem 2.5rem 1.9rem;
      background: #181719;
      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

      .main__service-header {
        margin-bottom: 3rem;
        display: flex;
        align-items: center;

        img {
          width: 3.659rem;
          height: 3.659rem;
          border-radius: 50%;
          margin-right: 2rem;
        }

        .main__service-header-info {
          font-weight: 500;
          h2 {
            font-size: 1.2rem;
            line-height: 1.5rem;
            margin-bottom: 0.3rem;
          }

          span {
            font-size: 1rem;
            line-height: 1.2rem;
            color: #828282;
          }
        }
      }

      .main__service-content {
        p {
          font-size: 1.8rem;
          font-weight: 700;
          line-height: 2.3rem;
          font-family: var(--lora-font);
        }
      }
    }
  }

  @include md {
    grid-template-columns: auto 50%;
    column-gap: 1.5rem;

    //42.7rem
    .main__content {
      h1 {
        margin-bottom: 2.5rem;
        font-size: 3.8rem;
        line-height: 4.1rem;
      }

      p {
        width: 36.5rem;
        font-size: 2rem;
        line-height: 2.5rem;
        margin-bottom: 2.8rem;
      }

      a {
        font-size: 1.8rem;
        line-height: 2.2rem;

        i {
          font-size: 1.6rem;
          margin-left: 1rem;
        }
      }
    }

    .main__services {
      height: 65%;
      //30.5rem

      .main__service {
        bottom: -0.5rem;
        left: auto;
        right: 4.341%;
      }
    }
  }

  @include xl {
    grid-template-columns: max-content auto;
    column-gap: 10.5rem;

    .main__content {
      h1 {
        margin-bottom: 4rem;
        font-size: 4.8rem;
        line-height: 6.1rem;
      }

      p {
        width: 36.5rem;
        font-size: 2.4rem;
        line-height: 2.9rem;
        margin-bottom: 4.8rem;
      }

      a {
        font-size: 1.8rem;
        line-height: 2.2rem;

        i {
          font-size: 1.6rem;
          margin-left: 1rem;
        }
      }
    }

    .main__services {
      height: 90%;
      padding: 1.683rem 9.7rem 2.5rem 1.9rem;

      .main__service {
        bottom: -9.5rem;
        left: auto;
        right: 4.341%;
        width: 41rem;

        .main__service-header {
          img {
            width: 5rem;
            height: 5rem;
          }

          .main__service-header-info {
            h2 {
              font-size: 1.4rem;
              line-height: 1.7rem;
              margin-bottom: 0.5rem;
            }

            span {
              font-size: 1.2rem;
              line-height: 1.5rem;
            }
          }
        }

        .main__service-content {
          p {
            font-size: 2.4rem;
            line-height: 3.1rem;
          }
        }
      }
    }
  }
}

/*=============== Footer ===============*/
footer {
  margin-top: 17.3rem;
  text-align: center;
  color: #bdbdbd;
  font-size: 1.4rem;
  font-weight: 500;
  line-height: 1.7rem;
  font-family: var(--montserrat-font);

  p {
    a {
      color: inherit;
    }
  }

  @include md {
    margin-top: 12.8rem;
  }
}

